# smart-order-router

./: CMakeLists.txt  README.md
config/: venues.json
lib/: venue-utility.hpp
src/: main.cpp  venue-utility.cpp
src/config/: VenueLoader.cpp  VenueLoader.hpp  venue-loader.cpp  venue-loader.hpp
src/market/: IParser.hpp  events.hpp
src/model/: venue.hpp
src/models/: venue.hpp
